# helixgen-core

./: .gitignore  .mcp.json  CLAUDE.md  PROTOCOL.md  README.md  SR-71 Right Now.hsp  crud_demo.py  helix_net.py  helix_probe.py  input.md  pyproject.toml  render.yaml  test-all-features.hsp  test-all-features.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/device/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/tone/: SKILL.md
.claude/skills/using-helixgen/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: BACKLOG.md  CLI.md  SPECULATIVE-BACKLOG.md  device-backlog.md  handoff.md  helix-format-reference.md  helix-protocol.md  helix-sftp-access.md  ir-hash-algorithm.md  recipe-reference.md  stadium-app-parity.md  tone3000-integration-handoff.md  usage-modes.md
docs/features/: controller-identifier-english-mapping.md  parallel-paths.md
docs/plans/: 2026-07-18-72-lock-deferrals.md  2026-07-18-73-helixgen-home.md  2026-07-18-77-discovery-polish.md  2026-07-18-87-suite-speed.md  2026-07-18-88core-lock-race.md  2026-07-18-88core-metalock-reclaim.md  2026-07-18-output-override-helper.md  2026-07-18-sync-stale-hash.md  2026-07-19-createcontent-status-misread.md  TEMPLATE.md
docs/plans/completed/: 2026-07-18-73-helixgen-home.md  2026-07-18-77-discovery-polish.md  2026-07-18-79-realhome-guard.md  2026-07-18-79i-git-identity.md  2026-07-18-87-suite-speed.md  2026-07-18-88core-metalock-reclaim.md  2026-07-18-output-override-helper.md  2026-07-19-createcontent-status-misread.md
docs/superpowers/plans/: 2026-05-01-helix-preset-generator.md  2026-05-26-footswitches-and-input-routing.md  2026-05-28-ir-registration.md  2026-05-30-helixgen-mcp-server.md  2026-06-28-surgical-preset-edits.md  2026-07-03-parallel-routing-and-hardening.md  2026-07-04-snapshot-fidelity-and-ir-edge.md  2026-07-05-category5-bypass-and-dualcab.md  2026-07-05-p35-endpoint-passthrough.md  2026-07-06-volume-normalization.md  2026-07-08-hsp-canonical-redesign.md  2026-07-12-mcp-path-based-tools.md  2026-07-13-stadium-app-parity.md  2026-07-13-tone-library-model-redesign.md  2026-07-14-loudness-measure-implementation.md  2026-07-15-library-metadata.md
docs/superpowers/specs/: 2026-05-01-helix-preset-generator-design.md  2026-05-25-footswitches-design.md  2026-05-25-input-routing-design.md  2026-05-28-ir-registration-design.md  2026-05-31-ir-workflow.md  2026-06-03-nam-tone-ableton-integration-design.md  2026-06-28-surgical-preset-edits-design.md  2026-07-02-decompiler-real-preset-hardening.md  2026-07-03-decompiler-round-trip-residuals.md  2026-07-03-parallel-routing-and-hardening-design.md  2026-07-04-dense-snapshot-arrays-design.md  2026-07-04-snapshot-coordinate-refs-design.md  2026-07-05-category5-bypass-and-dualcab-design.md  2026-07-05-direct-edit-discoverability-design.md  2026-07-05-p35-endpoint-passthrough-design.md  2026-07-05-tone-auto-control-wiring-design.md  2026-07-05-tone-instrument-recommendations-design.md  2026-07-05-tone-snapshots-per-part-design.md  2026-07-05-user-preferences-file-design.md  2026-07-06-volume-normalization-design.md  2026-07-08-harness-authoring-design.md  2026-07-08-hsp-canonical-redesign-design.md  2026-07-11-authoring-bridge-design.md  2026-07-11-helix-device-v2-plan.md  2026-07-11-helix-network-poc-design.md  2026-07-12-device-slot-ledger-design.md  2026-07-12-helix-content-model-multisetlist-refactor.md  2026-07-12-hsp-to-device-transcoder-design.md  2026-07-12-mcp-path-based-tools-design.md  2026-07-12-multisetlist-support-design.md  2026-07-13-device-re-findings.md  (+24 more)
helixgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_server/: DEPLOY.md  __init__.py  __main__.py  server.py  tools.py
mcp_server/data/: chassis.json
scratchpad/inventory/: bundle-functions.md  capture-checklist.md  global_keys.txt  manual-functions.md
scripts/: derive_controller_table.py
src/helixgen/: audio_metrics.py  bootstrap.py  chassis.py  cli.py  cli_device.py  cli_library.py  controllers.py  decompile.py  flowparams.py  generate.py  gitops.py  guitars.py  home.py  hsp.py  ingest.py  ir.py  ir_meta.py  irhash_cache.py  libinit.py  library.py  locks.py  migrate.py  mutate.py  naming.py  patch.py  preferences.py  preset_io.py  recipe.py  spec.py  tone_meta.py  view.py
src/helixgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/helixgen/device/: defs.py  (+30 more)
tests/: conftest.py  test_audio_metrics.py  test_bootstrap.py  test_chassis.py  test_cli.py  test_cli_analyze_audio.py  test_cli_device_measure.py  test_cli_device_normalize.py  test_cli_device_sync_progress.py  test_cli_device_telemetry_preflight.py  test_cli_irhash.py  test_cli_json.py  test_cli_library.py  test_cli_parity.py  test_cli_patch.py  test_commands.py  test_controller_depth.py  test_controllers.py  test_decompile.py  test_decompile_acceptance.py  test_decompile_advanced.py  test_decompile_cli.py  test_decompile_sonic_fidelity.py  test_device_backup.py  test_device_bridge.py  test_device_cli.py  test_device_client.py  test_device_content.py  test_device_defs.py  test_device_extra_import_surface.py  test_device_globaleq.py  test_device_irmd.py  test_device_ledger.py  test_device_ledger_cli.py  test_device_ledger_manifest_fold.py  test_device_ledger_sync.py  test_device_live.py  test_device_liveops.py  test_device_maintenance.py  test_device_measure.py  (+86 more)
tests/fixtures/: README.md
tests/golden/: README.md  capture_golden.py  conftest.py  harness.py  test_golden_parity.py
tests/live/: conftest.py  test_authoring.py  test_device_ir.py  test_device_read.py  test_device_write.py  test_discover.py  test_global_settings.py  test_ir_local.py  test_library.py  test_liveops.py  test_locks.py  test_setlists.py  test_sync.py
tests/mcp_server/: conftest.py  test_device_tools.py  test_library.py  test_patch_tools.py  test_protocol.py  test_tools.py
tools/: build_device_defs.py  build_modelmap.py  frida_run.py  frida_sftp_raw.py  frida_spawn.py  hook_sockets.js  osc.py  re_capture.py  re_capture_parity.py  requirements-re.txt
(+25 files in other folders)
