[project]
name = "helixgen"
version = "0.12.1"
description = "Generate Line 6 Helix Stadium .hsp / legacy .hlx preset files from JSON tone specs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mike Shea"},
]
keywords = ["line6", "helix", "guitar", "preset", "tone", "hsp", "impulse-response"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/sheax0r/helixgen"
Repository = "https://github.com/sheax0r/helixgen"
Issues = "https://github.com/sheax0r/helixgen/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
mcp = [
    "mcp>=1.0,<2.0",
]
device = [
    "pyzmq>=25",
    "msgpack>=1",
    "paramiko>=3.4",
]

[project.scripts]
helixgen = "helixgen.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["helixgen*", "mcp_server*"]

[tool.setuptools.package-data]
"helixgen.device" = ["_defs_data.json", "_modelmap.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
