[project]
name = "helixgen"
version = "0.29.0"
description = "Generate Line 6 Helix Stadium .hsp / legacy .hlx preset files from JSON tone specs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mike Shea"},
]
keywords = ["line6", "helix", "guitar", "preset", "tone", "hsp", "impulse-response"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/sheax0r/helixgen-core"
Repository = "https://github.com/sheax0r/helixgen-core"
Issues = "https://github.com/sheax0r/helixgen-core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "numpy>=1.26",
]
device = [
    "pyzmq>=25",
    "msgpack>=1",
    "paramiko>=3.4",
]
# `helixgen analyze-audio` (backlog #62 phase 3): numpy for the LUFS /
# crest / FFT-band metrics; `capture` adds the EXPERIMENTAL --record path
# (sounddevice needs the PortAudio system library).
analyze = [
    "numpy>=1.26",
]
capture = [
    "numpy>=1.26",
    "sounddevice>=0.4.6",
]

[project.scripts]
helixgen = "helixgen.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["helixgen*"]

[tool.setuptools.package-data]
"helixgen.device" = ["_defs_data.json", "_modelmap.json", "_settings_pages.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -n auto"
markers = [
    "live: opt-in live integration test (tests/live/); skipped unless HELIXGEN_LIVE=1",
    "authoring: live group — generate/patch/view/set-param/enable/disable/add-block/remove-block/swap-model/ingest/register",
    "library: live group — list-blocks/show-block/controllers",
    "ir: live group — irhash/ir-scan/register-irs/list-irs/ir-cache (local IR state)",
    "device_read: live group — read-only device verbs (info/list/setlists/read/blocks/settings/globaleq list/tuner/meters/measure/watch/backup/list-irs/...)",
    "device_write: live group — device-mutating preset verbs (install/load/create/rename/delete/set-info/pull/push/save)",
    "liveops: live group — verbs that mutate the ACTIVE tone (snapshot/bypass/model/live set-param)",
    "setlists: live group — device + local setlist management (setlist create/rename/delete/duplicate/import-hss/export-hss/add/remove/...)",
    "sync: live group — tone-library sync (sync/add/unsync/slots reorder/reorder)",
    "device_ir: live group — device IR verbs (push-ir/rename-ir/pull-ir/delete-ir/ir-prune dry-run)",
    "locks: live group — machine-local advisory device locks (lock/unlock/--status, blocking, token passthrough, --no-lock)",
    "discover: live group — LAN discovery + the #74 IP-resolution chain (device discover, persisted-record resolution, fail-fast)",
    "live_global: extra-gated global-settings writes; skipped unless HELIXGEN_LIVE_GLOBAL=1 too",
]
